added packages: pandas, scikit-learn, jupyter lab, jupyter notebook, seaborn, matplotlib

--- a/environment.yml
+++ b/environment.yml
@@ -26,3 +26,9 @@ dependencies:
   - termcolor
   - typing_extensions
   - wrapt
+  - jupyterlab
+  - pandas
+  - seaborn
+  - scikit-learn
+  - matplotlib
+  - notebook
